[workspace]
members = ["asyncrun"]
resolver = "2"

[workspace.package]
version = "0.0.5"
authors = ["Louis <836250617@qq.com>"]
description = ""
license = "MIT"
edition = "2021"
repository = "https://github.com/kingwingfly/asyncrun"

[workspace.dependencies]
asyncrun = { path = "asyncrun" }
# async
tokio = { version = "1", default-features = false }
tokio-stream = { version = "0.1", default-features = false }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "debuginfo"
panic = "abort"
