[package]
name = "asyncrun"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Asynchronously execute shell commands in filtered subdirectories"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive", "string"] }
features = "0.10.0"
futures = "0.3.30"
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "fs",
    "process",
    "macros",
] }
tokio-stream = { workspace = true, features = ["fs"] }
